feat: implement transaction write API
Closes #4
